Added new alias to install dispatcher

--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -22,7 +22,8 @@
     who      = shortlog --numbered --summary --email --no-merges
     feature  = checkout -b
     peeps    = !git log --pretty=format:%aN | sort | uniq -c | sort -rn
-    update-dispatcher = subtree pull -P git-hooks-dispatcher git@github.com:whiskeysierra/git-hooks-dispatcher.git
+    install-dispatcher = subtree add -P git-hooks-dispatcher git@github.com:whiskeysierra/git-hooks-dispatcher.git master
+    update-dispatcher = subtree pull -P git-hooks-dispatcher git@github.com:whiskeysierra/git-hooks-dispatcher.git master
 
     # additional aliases/commands in ~/bin/:
     # standup: show my last commits from the last workday
