--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -13,11 +13,15 @@
     # my aliases
     amend    = commit --amend
     delete   = !sh -c 'git branch -d $1 && git push origin :$1' -
+    dlc      = diff --cached HEAD^
     filelog  = log --patch
+    find     = !git ls-files | grep -i
+    grep     = grep -Ii
+    last     = !git ll -1
     ll       = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
     ls       = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
     new      = !sh -c 'git log $1@{1}..$1@{0} "$@"'
-    tags     = for-each-ref --sort='*authordate' --format='%(refname:short)' refs/tags
+    tags     = !git tag | sort -V
     tree     = log --graph --oneline --all
     who      = shortlog --numbered --summary --email --no-merges
     feature  = checkout -b
