Added new work server

--- a/repository/.ssh/config
+++ b/repository/.ssh/config
@@ -109,3 +109,9 @@ host www.tlf.cosmocode.de
     port 6589
     IdentityFile ~/.ssh/work
 
+host tlflive1-test.cosmocode.de-root
+    user root
+    hostname tlflive1-test.cosmocode.de
+    port 6589
+    IdentityFile ~/.ssh/work
+
