--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -22,7 +22,7 @@
     ls       = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
     new      = !sh -c 'git log $1@{1}..$1@{0} "$@"'
     peeps    = !git log --pretty=format:%aN | sort | uniq -c | sort -rn
-    tags     = !git tag | sort -V
+    tags     = !git tag | sort -t. -k 1,1n -k 2,2n -k 3,3n -k 4,4n 
     tree     = log --graph --oneline --all
     who      = shortlog --numbered --summary --email --no-merges
 
