Added new server to ssh config

--- a/repository/.ssh/config
+++ b/repository/.ssh/config
@@ -115,3 +115,8 @@ host tlflive1-test.cosmocode.de-root
     port 6589
     IdentityFile ~/.ssh/work
 
+host tlflive1-test.cosmocode.de
+    user tlf
+    hostname tlflive1-test.cosmocode.de
+    port 6589
+    IdentityFile ~/.ssh/work
