Added alias for whatthecommit

--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -28,6 +28,7 @@
     tags       = !git tag | sort -t. -k 1,1n -k 2,2n -k 3,3n -k 4,4n 
     tree       = log --graph --oneline --all
     who        = shortlog --numbered --summary --email --no-merges
+    wtc        = whatthecommit
 
     # additional aliases/commands in ~/bin/:
     # standup: show my last commits from the last workday
