Removed old ssh public keys

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,5 @@
 /repository/.gnupg/*.gpg~
 /repository/.gnupg/random_seed
 
-/repository/.ssh/work
-/repository/.ssh/personal
-/repository/.ssh/mvn
+/repository/.ssh/id_*
 
