--- a/config/ZALANDO-6052.yml
+++ b/config/ZALANDO-6052.yml
@@ -1,5 +1,6 @@
 # macbook specifics
 
-.m2/settings.xml: ~/.m2/settings.xml
+work/.bash_include: ~/.bash_include
+work/.m2/settings.xml: ~/.m2/settings.xml
 /opt/gradle-1.7: /opt/gradle
 /opt/apache-maven-3.0.5: /opt/maven
