--- a/config/willi.local.yml
+++ b/config/willi.local.yml
@@ -1,5 +1,6 @@
 # macbook specifics
 
+personal/.bash_include: ~/.bash_include
 /opt/gradle-1.6: /opt/gradle
 /usr/local/texlive/2010/bin/universal-darwin: /opt/latex/bin
 /opt/apache-maven-3.0.5: /opt/maven
