--- a/config/ZALANDO-6052.yml
+++ b/config/ZALANDO-6052.yml
@@ -3,5 +3,6 @@
 work/.bash_include: ~/.bash_include
 work/.gitc: ~/.gitc
 work/.m2/settings.xml: ~/.m2/settings.xml
+.svn-completion.sh: ~/.svn-completion.sh
 /opt/gradle-1.7: /opt/gradle
 /opt/apache-maven-3.0.5: /opt/maven
