--- a/config/ZALANDO-6052.yml
+++ b/config/ZALANDO-6052.yml
@@ -4,6 +4,7 @@ work/.bash_include: ~/.bash_include
 work/.gitc: ~/.gitc
 work/.m2/settings.xml: ~/.m2/settings.xml
 work/.m2/settings-security.xml: ~/.m2/settings-security.xml
+work/.subversion/config: ~/.subversion/config
 .svn-completion.bash: ~/.svn-completion.bash
 /opt/gradle-1.7: /opt/gradle
 /opt/apache-maven-3.0.5: /opt/maven
