--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -11,7 +11,6 @@
 
     # my aliases
     amend      = commit --amend
-    bs         = branch-status
     delete     = !sh -c 'git branch -d $1 && git push origin :$1' -
     dispatcher = !~/.git-dispatcher/git-dispatcher.py
     dlc        = diff --cached HEAD^
@@ -24,6 +23,7 @@
     ls         = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
     new        = !sh -c 'git log $1@{1}..$1@{0} "$@"'
     push-all   = !git push --all && git push --tags
+    relate     = relate
     tags       = !git tag | sort -t. -k 1,1n -k 2,2n -k 3,3n -k 4,4n 
     tree       = log --graph --oneline --all
     who        = shortlog --numbered --summary --email --no-merges
