--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -17,6 +17,7 @@
     filelog    = log --patch
     find       = !git ls-files | grep -i
     grep       = grep -Ii
+    graph      = log --oneline --abbrev-commit --all --graph --decorate --color
     ignore     = !~/.git-ignore/git-ignore.py
     last       = !git ll -1
     ll         = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
