--- a/repository/.gitconfig
+++ b/repository/.gitconfig
@@ -49,6 +49,8 @@
     log = true                                                                  
     summary = true
 [push]
-    default = current
+    default = simple
 [remote "origin"]
     push = HEAD
+    fetch = +refs/heads/*:refs/remotes/origin/*
+    fetch = +refs/pull-requests/*:refs/remotes/origin/pull-requests/*
