--- a/repository/.ssh/config
+++ b/repository/.ssh/config
@@ -1,3 +1,6 @@
-host github.com
-    IdentityFile ~/.ssh/personal
+Host github.com
+IdentityFile ~/.ssh/id_personal
+
+Host stash.zalando.net
+IdentityFile ~/.ssh/id_work
 
