--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 /repository/.gnupg/*.gpg
 /repository/.gnupg/*.gpg~
 /repository/.gnupg/random_seed
+/repository/.gnupg/gpg-agent.env
 
 /repository/.ssh/id_*
 /repository/.ssh/app-*.pem
 /repository/.ssh/known_hosts
+/repository/.ssh/environment-*
 
