--- a/config/default.yml
+++ b/config/default.yml
@@ -7,7 +7,7 @@ bin: ~/bin
 .git-ignore: ~/.git-ignore
 .gitconfig: ~/.gitconfig
 .gitprompt: ~/.gitprompt
-.gnupg: ~/.gnupg
+.gnupg/gpg.conf: ~/.gnupg/gpg.conf
 .gradle/gradle.properties: ~/.gradle/gradle.properties
 .inputrc: ~/.inputrc
 .m2/settings.xml: ~/.m2/settings.xml
