Added new work host

--- a/config/willi.local.yml
+++ b/config/willi.local.yml
@@ -1,5 +1,16 @@
 # personal specifics
 
+.bash_aliases: ~/.bash_aliases
+.bash_profile: ~/.bash_profile
+.bashrc: ~/.bashrc
+.git-dispatcher: ~/.git-dispatcher
+.git-flow-completion: ~/.git-flow-completion
+.git-ignore: ~/.git-ignore
+.gitprompt: ~/.gitprompt
+.gradle/gradle.properties: ~/.gradle/gradle.properties
+.inputrc: ~/.inputrc
+.mvn-completion.bash: ~/.mvn-completion.bash
+
 personal/.bash_include: ~/.bash_include
 personal/.gitc: ~/.gitc
 /opt/gradle-1.6: /opt/gradle
