--- a/config/ZALANDO-22360.yml
+++ b/config/ZALANDO-22360.yml
@@ -2,4 +2,5 @@
 
 .zshrc: ~/.zshrc
 work/.zsh_include: ~/.zsh_include
-work/.gitc: ~/.gitc
+
+.oh-my-zsh/themes/whiskeysierra.zsh-theme: ~/.oh-my-zsh/themes/whiskeysierra.zsh-theme
