--- a/config/willi.local.yml
+++ b/config/willi.local.yml
@@ -1,5 +1,4 @@
 # personal specifics
 
-.git-ignore: ~/.git-ignore
-
+~/Library/Application Support/mai: ~/.config/mai
 /opt/apache-maven-3.0.5: /opt/maven
