--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
     amend      = commit --amend
     authors    = !git shortlog --summary --email --numbered | cut -c8- > AUTHORS && cat AUTHORS
     diff-words = diff --color-words
+    dry-merge  = "!f() { git merge-tree $(git merge-base $1 $(git rev-parse --abbrev-ref HEAD)) $1 $(git rev-parse --abbrev-ref HEAD); }; f"
     filelog    = log --patch
     find       = !git ls-files | grep -i
     graph      = log --oneline --abbrev-commit --all --graph --decorate --color
