--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,7 @@
 Host github.com
 IdentityFile ~/.ssh/id_personal
+Hostname ssh.github.com
+Port 443
 
 Host stash.zalando.net
 IdentityFile ~/.ssh/id_work
