--- a/.gitconfig
+++ b/.gitconfig
@@ -53,3 +53,6 @@
     fetch = +refs/heads/*:refs/remotes/origin/*
 [user]
     name = Willi Schönborn
+    signingkey = 43A921D40B25C552
+[commit]
+    gpgsign = true
