--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,6 @@
-Host github.com
+Host *
+UseKeychain yes
+AddKeysToAgent yes
+IdentityFile ~/.ssh/id_rsa
 IdentityFile ~/.ssh/id_personal
-Hostname ssh.github.com
-Port 443
-
-Host stash.zalando.net
 IdentityFile ~/.ssh/id_work
-
