Added git init template to have main as default branch instead of main

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,8 @@
     trustctime = false
     pager = less -r
     excludesfile = ~/.gitignore-global
+[init]
+    templateDir = ~/.config/git/template/
 [alias]
     # common typos
     staus      = status
