--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,22 +4,28 @@
     pager = less -r
     excludesfile = ~/.gitignore-global
 [init]
-    templateDir = ~/.config/git/template/
+    # can't be a symlink
+    templateDir = ~/.dotfiles/git-template
 [alias]
     # common typos
-    staus      = status
-    stats      = status
-    stauts     = status
-    st         = status
+    staus     = status
+    stats     = status
+    stauts    = status
+    st        = status
 
     # my aliases
-    amend      = commit --amend
-    last       = log --stat --abbrev-commit -1
-    ll         = log --stat --abbrev-commit
-    sync       = !git pull && git push
-    tags       = !git tag | sort -t. -k 1,1n -k 2,2n -k 3,3n -k 4,4n 
-    update     = !git stash -u && git pull && git stash pop
-    who        = shortlog --numbered --summary --email --no-merges
+    amend     = commit --amend
+    last      = log --stat --abbrev-commit -1
+    ll        = log --stat --abbrev-commit
+    sync      = !git pull && git push
+    tags      = !git tag | sort -t. -k 1,1n -k 2,2n -k 3,3n -k 4,4n
+    update    = !git stash --include-untracked && git pull && git stash pop
+    who       = shortlog --numbered --summary --email --no-merges
+
+    # rename master to main
+    main      = !git branch --move main && git push --set-upstream origin main
+    # remove the remnants of the master branch once origin has been cleaned up
+    no-master = !git fetch && git remote prune origin && git remote set-head origin --auto
 [color]
     branch = auto
     diff = auto
