--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -53,6 +53,7 @@
     # fetch = +refs/heads/*:refs/remotes/origin/*
 [user]
     name = Willi Schönborn
+    useConfigOnly = true
     signingkey = 43A921D40B25C552
 [commit]
     gpgsign = true
