Added Git LFS and project alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -64,3 +64,8 @@
     helper = manager-core
 [credential "https://dev.azure.com"]
     useHttpPath = true
+[filter "lfs"]
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    required = true
