Added jumphost SSH config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -4,3 +4,14 @@ AddKeysToAgent yes
 IdentityFile ~/.ssh/id_rsa
 IdentityFile ~/.ssh/id_personal
 IdentityFile ~/.ssh/id_work
+
+Host 10.*
+    User willi.schoenborn@gropyus.com
+    PubkeyAuthentication no
+    ProxyJump jumphost
+    RequestTTY yes
+    RemoteCommand sudo su
+Host jumphost
+    Hostname 52.157.84.241
+    User willi.schoenborn@gropyus.com
+    PubkeyAuthentication no
