--- a/gpg/.gnupg/gpg-agent.conf
+++ b/gpg/.gnupg/gpg-agent.conf
@@ -1,4 +1,8 @@
+# https://github.com/drduh/config/blob/master/gpg-agent.conf
+# https://www.gnupg.org/documentation/manuals/gnupg/Agent-Options.html
+enable-ssh-support
+ttyname $GPG_TTY
+# 1 week
 default-cache-ttl 604800
 max-cache-ttl 604800
-
 pinentry-program /usr/local/bin/pinentry-mac
