--- a/gpg/.gnupg/gpg-agent.conf
+++ b/gpg/.gnupg/gpg-agent.conf
@@ -2,7 +2,8 @@
 # https://www.gnupg.org/documentation/manuals/gnupg/Agent-Options.html
 enable-ssh-support
 ttyname $GPG_TTY
-# 1 week
-default-cache-ttl 604800
-max-cache-ttl 604800
+# The cache-ttl options do NOT apply when using a YubiKey as the PIN is cached by the YubiKey itself.
+# Therefore, in order to clear the PIN from cache, you need to unplug the YubiKey.
+default-cache-ttl 60
+max-cache-ttl 120
 pinentry-program /usr/local/bin/pinentry-mac
