--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,15 +1,21 @@
 Host *
-UseKeychain yes
-AddKeysToAgent yes
-IdentityFile ~/.ssh/id_personal
+    AddressFamily inet
+    ChallengeResponseAuthentication no
+    Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com
+    ForwardAgent no
+    ForwardX11 no
+    ForwardX11Trusted no
+    HashKnownHosts yes
+    HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa
+    IdentityFile ~/.ssh/id_rsa.pub
+    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com
+    PasswordAuthentication no
+    ServerAliveCountMax 2
+    ServerAliveInterval 300
+    StrictHostKeyChecking ask
+    VerifyHostKeyDNS yes
+    VisualHostKey yes
 
-Host 10.*
-    User willi.schoenborn@gropyus.com
-    PubkeyAuthentication no
-    ProxyJump jumphost
-    RequestTTY yes
-    RemoteCommand sudo su
-Host jumphost
-    Hostname 52.157.84.241
-    User willi.schoenborn@gropyus.com
-    PubkeyAuthentication no
+Host github.com
+    IdentitiesOnly yes
