Added SSH public key

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -41,7 +41,8 @@ no-symkey-cache
 # Enable smartcard
 use-agent
 # Disable recipient key ID in messages
-throw-keyids
+# Doesn't work with Mailvelope
+# throw-keyids
 # Default/trusted key ID to use (helpful with throw-keyids)
 default-key 0x5933861F7197F8C7
 #default-key 0xFF3E7D88647EBCDB
