--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,6 +28,8 @@
     # 3. Change branch protection from master to main on Github
     # 4. Delete remote master branch and clean up any remnants of master:
     no-master = !git push origin --delete master && git fetch && git remote prune origin && git remote set-head origin --auto
+[branch]
+    autosetuprebase = always
 [color]
     branch = auto
     diff = auto
@@ -40,11 +42,20 @@
     match    = red bold
     linenumber = green
     separator  = cyan
-[branch]
-    autosetuprebase = always
+[commit]
+    gpgsign = true
+[credential]
+	helper =
+	helper = /usr/local/share/gcm-core/git-credential-manager-core
+[credential "https://dev.azure.com"]
+	useHttpPath = true
+[diff "sops"]
+    textconv = "sops -d"
 [merge]
     log = true
     summary = true
+[pager]
+    branch = false
 [push]
     default = simple
 [remote "origin"]
@@ -54,17 +65,8 @@
     name = Willi Schönborn
     useConfigOnly = true
     signingkey = 0x5933861F7197F8C7
-[commit]
-    gpgsign = true
-[pager]
-    branch = false
 [filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
     required = true
-[credential]
-	helper = 
-	helper = /usr/local/share/gcm-core/git-credential-manager-core
-[credential "https://dev.azure.com"]
-	useHttpPath = true
