Added gpg's sshcontrol to expose A keys as SSH keys

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !/gpg/.gnupg/.gpg-v21-migrated
 !/gpg/.gnupg/gpg.conf
 !/gpg/.gnupg/gpg-agent.conf
+!/gpg/.gnupg/sshcontrol
 
 /ssh/**/*
 !/ssh/.ssh
