--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -32,6 +32,7 @@ list-options show-uid-validity
 verify-options show-uid-validity
 # Display all keys and their fingerprints
 with-fingerprint
+with-subkey-fingerprints
 with-keygrip
 # Display key origins and updates
 #with-key-origin
