--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,6 +5,7 @@
 [init]
     # can't be a symlink
     templateDir = ~/.dotfiles/git-template
+    defaultBranch = trunk
 [alias]
     # common typos
     staus     = status
@@ -66,7 +67,7 @@
     process = git-lfs filter-process
     required = true
 [credential]
-	helper = 
-	helper = /usr/local/share/gcm-core/git-credential-manager-core
+    helper = 
+    helper = /usr/local/share/gcm-core/git-credential-manager-core
 [credential "https://dev.azure.com"]
-	useHttpPath = true
+    useHttpPath = true
