--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,28 +7,16 @@
     templateDir = ~/.dotfiles/git-template
     defaultBranch = trunk
 [alias]
-    # common typos
-    staus     = status
-    stats     = status
-    stauts    = status
-    st        = status
-
-    # my aliases
     amend     = commit --amend
     last      = log --stat --abbrev-commit -1
     ll        = log --stat --abbrev-commit
+    revise    = !git add -A && git amend -C HEAD && git push -f
+    st        = status
     sync      = !git pull && git push
     tags      = !git tag | sort -t. -k 1,1n -k 2,2n -k 3,3n -k 4,4n
-    update    = !git stash --include-untracked && git pull && git stash pop
+    up        = !git stash --include-untracked && git pull && git stash pop
     who       = shortlog --numbered --summary --email --no-merges
     word-diff = diff --color-words=.
-
-    # HOWTO migrate from master to main
-    # 1. Rename local master to main and update github workflows: git main
-    # 2. Change default branch from master to main on Github
-    # 3. Change branch protection from master to main on Github
-    # 4. Delete remote master branch and clean up any remnants of master:
-    no-master = !git push origin --delete master && git fetch && git remote prune origin && git remote set-head origin --auto
 [branch]
     autosetuprebase = always
 [color]
