--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,16 +24,11 @@
     match    = red bold
     separator  = cyan
 [commit]
-    gpgsign = true
+	gpgSign = false
 [core]
     ignorecase = false
     pager = less -r
     trustctime = false
-[credential]
-    helper =
-    helper = /usr/local/share/gcm-core/git-credential-manager-core
-[credential "https://dev.azure.com"]
-    useHttpPath = true
 [diff "sops"]
     textconv = "sops -d"
 [filter "lfs"]
@@ -62,3 +57,10 @@
     name = Willi Schönborn
     signingkey = 0x5933861F7197F8C7
     useConfigOnly = true
+[safe]
+    directory = /Users/willi.schoenborn/Projects/architecture/tech.gropyus.com
+[credential]
+	helper = 
+	helper = /usr/local/share/gcm-core/git-credential-manager
+[credential "https://dev.azure.com"]
+	useHttpPath = true
