--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -19,3 +19,11 @@ Host *
 
 Host github.com
     IdentitiesOnly yes
+
+Host fes-station-controllers.int.gropyus.com
+    IdentitiesOnly yes
+    User willi.schoenborn@gropyus.com
+
+Host fes-plc-trace-exporter.int.gropyus.com
+    IdentitiesOnly yes
+    User willi.schoenborn@gropyus.com
